--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "angulartest",
+  "version": "0.0.1",
   "private": true,
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
+    "karma": "*",
+    "phantomjs": "*",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-concurrent": "^1.0.0",
@@ -28,6 +31,7 @@
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
+    "jasmine-core": "*",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
     "time-grunt": "^1.0.0"
